// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider spin spin.indicator should work 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="ant-spin ant-spin-spinning"
>
  <div
    class="custom-indicator ant-spin-dot"
  />
</div>
`;

exports[`ConfigProvider spin spin.indicator should work in nested ConfigProvider 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="ant-spin ant-spin-spinning"
>
  <div
    class="custom-indicator-1 ant-spin-dot"
  />
</div>
`;
